--- a/app.yaml
+++ b/app.yaml
@@ -5,13 +5,17 @@ api_version: 1
 threadsafe: yes
 
 handlers:
-- url: /css/(.*)
-  static_files: css/\1
-  upload: css/.*
+- url: /app/(.*)
+  static_files: app/\1
+  upload: app/.*
 
-- url: /fonts/(.*)
-  static_files: fonts/\1
-  upload: fonts/.*
+- url: /bower_components/(.*)
+  static_files: bower_components/\1
+  upload: bower_components/.*
+
+- url: /dist/(.*)
+  static_files: dist/\1
+  upload: dist/.*
 
 - url: /icons/(.*)
   static_files: icons/\1
@@ -20,10 +24,6 @@ handlers:
 - url: /img/(.*)
   static_files: img/\1
   upload: img/.*
-
-- url: /js/(.*)
-  static_files: js/\1
-  upload: js/.*
 
 - url: /robots.txt
   static_files: robots.txt
