--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "fontawesome": "~4.3.0",
     "angular": "~1.4.1",
     "jquery.stellar": "~0.6.2",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "ngmap": "~1.7.11"
   },
   "devDependencies": {}
 }
