--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "albatros",
+  "name": "albatros-club-de-plage",
   "version": "0.0.1",
   "dependencies": {
     "bootstrap": "~3.3.5",
