better bower and package json

--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
   "bugs": {
     "url": "https://github.com/iooK/albatros-club-de-plage/issues"
   },
-  "homepage": "https://github.com/iooK/albatros-club-de-plage#readme"
+  "homepage": "http://albatros-club-de-plage.fr"
 }
