--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-clean-css": "^2.0.10",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^4.1.0",
     "gulp-extend": "^0.2.0",
     "gulp-header": "^1.2.2",
     "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6"
-  },
-  "scripts": {
-    "start": "node server.js"
   },
   "description": "Website of Albatros Club de Plage",
   "main": "web/index.html",
