--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "albatros-club-de-plage",
   "version": "1.0.0",
   "devDependencies": {
+    "bower": "^1.8.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-clean-css": "^2.0.10",
