--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "bower": "^1.8.0",
+    "eslint": "^3.13",
+    "eslint-plugin-angular": "^1.6",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-clean-css": "^2.0.10",
