--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,4 @@
-runtime: php
-env: flex
+runtime: php55
 api_version: 1
 threadsafe: yes
 
@@ -9,11 +8,116 @@ skip_files:
 
 # ignore all backup files
 - ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\.bak$
 
 # ignore all except build directory
-- ^(?!build/).*$
+- ^(config/|node_modules/|public/|scripts/|src/).*$
+
+default_expiration: "30d"
 
 handlers:
+- url: /(.*\.css)
+  mime_type: text/css
+  static_files: build/\1
+  upload: build/(.*\.css)
+
+- url: /(.*\.html)
+  mime_type: text/html
+  static_files: build/\1
+  upload: build/(.*\.html)
+
+- url: /(.*\.ico)
+  mime_type: image/x-icon
+  static_files: build/\1
+  upload: build/(.*\.ico)
+
+- url: /(.*\.js)
+  mime_type: application/js
+  static_files: build/\1
+  upload: build/(.*\.js)
+
+- url: /(.*\.json)
+  mime_type: application/json
+  static_files: build/\1
+  upload: build/(.*\.json)
+
+- url: /(.*\.(svg|svgz))
+  mime_type: images/svg+xml
+  static_files: build/\1
+  upload: build/(.*\.(svg|svgz))
+
+- url: /(.*\.swf)
+  mime_type: application/x-shockwave-flash
+  static_files: build/\1
+  upload: build/(.*\.swf)
+
+- url: /(.*\.txt)
+  mime_type: text/plain
+  static_files: build/\1
+  upload: build/(.*\.txt)
+
+- url: /(.*\.xml)
+  mime_type: application/xml
+  static_files: build/\1
+  upload: build/(.*\.xml)
+
+# fonts
+- url: /(.*\.eot)
+  mime_type: application/vnd.ms-fontobject
+  static_files: build/\1
+  upload: build/(.*\.eot)
+
+- url: /(.*\.otf)
+  mime_type: font/opentype
+  static_files: build/\1
+  upload: build/(.*\.otf)
+
+- url: /(.*\.ttf)
+  mime_type: application/x-font-ttf
+  static_files: build/\1
+  upload: build/(.*\.ttf)
+
+- url: /(.*\.woff)
+  mime_type: application/x-font-woff
+  static_files: build/\1
+  upload: build/(.*\.woff)
+
+- url: /(.*\.woff2)
+  mime_type: application/x-font-woff2
+  static_files: build/\1
+  upload: build/(.*\.woff2)
+
+# images
+- url: /(.*\.bmp)
+  mime_type: image/bmp
+  static_files: build/\1
+  upload: build/(.*\.bmp)
+
+- url: /(.*\.gif)
+  mime_type: image/gif
+  static_files: build/\1
+  upload: build/(.*\.gif)
+
+- url: /(.*\.(jpeg|jpg))
+  mime_type: image/jpeg
+  static_files: build/\1
+  upload: build/(.*\.(jpeg|jpg))
+
+- url: /(.*\.png)
+  mime_type: image/png
+  static_files: build/\1
+  upload: build/(.*\.png)
+
+# all others files with no mime-type needed (or new files without mime-type already declared)
+- url: /(.*\.map)
+  static_files: build/\1
+  upload: build/(.*\.map)
+
+# site root
 - url: /
-  static_dir: build/
+  mime_type: text/html
+  static_files: build/index.html
+  upload: build/index.html
