--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "font-awesome": "^4.7.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.5.2",
-    "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
     "react-fontawesome": "^1.6.1",
     "react-google-maps": "^6.3.0",
-    "reactstrap": "^4.5.0"
+    "react-transition-group": "^1.1.3",
+    "reactstrap": "^4.6.2"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
