--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 .idea
 
 # dependencies
-/node_modules
+/node_modules/
 
 # testing
-/coverage
+/coverage/
 
 # production
-/build
+/build/
 
 # misc
 .DS_Store
