--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "albatros",
-  "homepage": "http://albatros-club-de-plage.fr",
-  "version": "2.0.0",
+  "homepage": "https://albatros-club-de-plage.fr",
+  "version": "2.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.0.0 <15.0.0",
+    "yarn": ">=1.0.0 <2.0.0"
+  },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
