--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -30,32 +30,32 @@ jobs:
             url: ${{ steps.deployment.outputs.page_url }}
         runs-on: ubuntu-latest
         steps:
-            -   name: Checkout
-                uses: actions/checkout@v4
+            - name: Checkout
+              uses: actions/checkout@v4
 
-            -   name: Use Node.js 20
-                uses: actions/setup-node@v4
-                with:
-                    node-version: '20.x'
-            -   name: Install packages
-                run: yarn install --frozen-lockfile
+            - name: Use Node.js 20
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "20.x"
+            - name: Install packages
+              run: yarn install --frozen-lockfile
 
-            -   name: Linters
-                run: yarn lint
+            - name: Linters
+              run: yarn lint
 
-            -   name: Build website
-                run: yarn build
-#            -   name: Setup Github Pages
-#                uses: actions/configure-pages@v5
+            - name: Build website
+              run: yarn build
+            #            -   name: Setup Github Pages
+            #                uses: actions/configure-pages@v5
 
-            -   name: Upload Pages artifact
-                uses: actions/upload-pages-artifact@v3
-                with:
-                    name: github-pages
-                    path: './out' # Upload only the build directory
+            - name: Upload Pages artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+                  name: github-pages
+                  path: "./out" # Upload only the build directory
 
-            -   name: Deploy to GitHub Pages
-                id: deployment
-                uses: actions/deploy-pages@v4
-                with:
-                    artifact_name: github-pages
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v4
+              with:
+                  artifact_name: github-pages
