--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "dev": "next dev",
+        "format": "prettier -w .",
         "lint": "next lint",
-        "serve": "serve ./out"
+        "serve": "serve ./out",
+        "start": "next start"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
