--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -14,7 +14,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    deploy:
+    test:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
