--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -44,6 +44,8 @@ jobs:
             - name: Install packages
               run: yarn install --frozen-lockfile
 
+            - name: Build website
+              run: yarn build
             #            - if: github.ref == env.DEPLOYMENT_BRANCH
             #              name: Setup Github Pages
             #              uses: actions/configure-pages@v5
