--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 name: tests_and_deploy
 
 env:
-    BASE_PATH_IMG: "/albatros-club-de-plage"
+    BASE_PATH_IMG: "/albatros-club-de-plage/"
     CI: 1
     IS_CI: 1
 
