--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "albatros-club-de-plage",
     "version": "3.0.0",
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
     "private": true,
     "scripts": {
         "build": "BASE_PATH_IMG=${BASE_PATH_IMG:-\"\"} next build",
